--- a/index.css
+++ b/index.css
@@ -1,35 +1,77 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  font-family: "Linux Biolinum", "Gill Sans", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  color: #113b36;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  background-color: #5f968e;
 }
 
-  #container {
-    margin: auto;
-    width: 800px;
-    height: 800px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: antiquewhite;
-  }
-  
-  .grid-item {
-    height: 50px;
-    width: 50px;
-    flex-grow: 1;
-    border: 1px solid #ddd;
-    text-align: center;
-  }
+#game-board {
+  width: 800px;
+  height: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-rows: auto;
+  gap: 20px;
+  text-align: center;
+}
 
-  .grid-item:hover{
-    background-color: cadetblue;
-  }
+#button-container {
+  margin-top: 30px;
+  width: 100%;
+  background-color: rgb(226, 188, 137);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+#button-container button {
+  font-size: larger;
+  height: 35px;
+  max-width: 150px;
+  flex-grow: 1;
+  background-color: #c29355;
+  border: none;
+}
+
+#button-container button:hover {
+  background-color: #d6926b;
+}
+
+#container {
+  width: 800px;
+  height: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgb(226, 188, 137);
+}
+
+.grid-item {
+  height: 50px;
+  width: 50px;
+  border: 2px solid #5f968e;
+  text-align: center;
+  border-radius: 0;
+}
+
+.grid-item:hover {
+  background-color: rgb(113, 184, 163);
+}
+
+.grid-item.active {
+  background-color: #1b524b;
+  border: 1px solid #5f968e44;
+}
