Adjusts button container height and removes set gameboard height

--- a/index.css
+++ b/index.css
@@ -19,7 +19,6 @@ body {
 
 #game-board {
   width: 800px;
-  height: 100%;
   margin: auto;
   display: grid;
   grid-template-rows: auto;
@@ -29,6 +28,7 @@ body {
 
 #button-container {
   margin-top: 30px;
+  height: 50px;
   width: 100%;
   background-color: rgb(226, 188, 137);
   display: flex;
