--- a/index.css
+++ b/index.css
@@ -28,12 +28,13 @@ body {
 
 #button-container {
   margin-top: 30px;
+  padding: 0 8px;
   height: 50px;
   width: 100%;
   background-color: rgb(226, 188, 137);
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
